--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
-    <ti<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>tle>React App</title>
+    <title>React App</title>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
